<resources>
    <string name="app_name">Project</string>
    <string name="add_photo">Add Photo</string>
    <string name="add_photo_txt">Please add from 1 to 5 phtos to your car</string>
    <string name="phone">Phone</string>
    <string name="car_image">car_image</string>
    <string name="item_title">Title</string>
    <string name="item_category">Category</string>
    <string name="item_description">Description</string>
    <string name="seller_name">Name</string>
    <string name="seller_location">Location</string>
    <string name="seller_email">Email</string>
    <string name="sell_car">Sell Car</string>
</resources>
