<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.marian.project.SellYourItem">

    <ScrollView
        android:id="@+id/sell_scroll"
        android:layout_width="368dp"
        android:layout_height="495dp"
        tools:ignore="UselessParent"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <include
            android:id="@+id/sell_car_bar"
            layout="@layout/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true" />

        <LinearLayout
            android:id="@+id/sellLL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/addImgLL"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingBottom="@dimen/padding"
                android:paddingLeft="@dimen/padding"
                android:paddingRight="@dimen/padding"
                android:paddingTop="@dimen/padding">

                <TextView
                    android:id="@+id/add_photo_txt1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingTop="@dimen/padding"
                    android:text="@string/add_photo_txt"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_size" />

                <ImageView
                    android:id="@+id/add_img"
                    android:layout_width="wrap_content"
                    android:layout_height="116dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/car_image"
                    android:paddingTop="@dimen/padding"
                    app:srcCompat="@drawable/add_img" />

                <TextView
                    android:id="@+id/add_photo_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingTop="@dimen/padding"
                    android:text="@string/add_photo"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_size"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingBottom="@dimen/padding"
                android:paddingLeft="@dimen/padding"
                android:paddingRight="@dimen/padding"
                android:paddingTop="@dimen/padding">

                <EditText
                    android:id="@+id/title_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="text"
                    android:paddingBottom="@dimen/padding"
                    android:paddingTop="@dimen/padding"
                    android:text="@string/item_title"
                    android:textAppearance="@style/TextAppearance.AppCompat.Button"
                    android:textSize="18sp"
                    tools:ignore="LabelFor"
                    tools:text="@string/item_title" />

                <EditText
                    android:id="@+id/category_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textFilter"
                    android:paddingBottom="@dimen/padding"
                    android:paddingTop="@dimen/padding"
                    android:text="@string/item_category"
                    android:textAppearance="@style/TextAppearance.AppCompat.Button"
                    android:textSize="18sp"
                    tools:ignore="LabelFor"
                    tools:text="@string/item_category" />

                <EditText
                    android:id="@+id/desc_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textMultiLine"
                    android:paddingBottom="@dimen/padding"
                    android:paddingTop="@dimen/padding"
                    android:text="@string/item_description"
                    tools:ignore="LabelFor"
                    tools:text="@string/item_description" />

                <EditText
                    android:id="@+id/name_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:paddingBottom="@dimen/padding"

                    android:paddingTop="@dimen/padding"
                    android:text="@string/seller_name"
                    tools:ignore="LabelFor"
                    tools:text="@string/seller_name" />

                <EditText
                    android:id="@+id/loc_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:paddingBottom="@dimen/padding"
                    android:paddingTop="@dimen/padding"
                    android:text="@string/seller_location"
                    tools:ignore="LabelFor"
                    tools:text="@string/seller_location" />

                <EditText
                    android:id="@+id/email_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/seller_email"
                    android:inputType="textEmailAddress"
                    android:paddingBottom="@dimen/padding"
                    android:paddingTop="@dimen/padding"
                    android:text="@string/seller_email"
                    tools:text="@string/seller_email" />

                <EditText
                    android:id="@+id/phone_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="phone"
                    android:paddingBottom="@dimen/padding"
                    android:paddingTop="@dimen/padding"
                    android:text="@string/phone"
                    tools:ignore="LabelFor"
                    tools:text="@string/phone" />
            </LinearLayout>
        </LinearLayout>


    </ScrollView>
</RelativeLayout>
